# treeScanner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  desktop.ini
.cargo/: config.toml
resources/: .treescanner.conf.template  version.rc
src/: lib.rs  main.rs
src/app/: mod.rs  treebuilder.rs
src/config/: args.rs  loader.rs  mod.rs
src/utils/: ascii_spinner.rs  logger.rs  mod.rs
tests/: config_tests.rs  treebuilder_tests.rs
