[package]
name = "treescanner"
version         = "1.1.0"                       # Buildversion
edition         = "2024"                        # Sprach­standard von Crate
#author                                           wird in args.rs gesetzt
documentation   = "https://github.com/realAscot/treeScanner/blob/main/README.md"

[package.metadata.winres]
subsystem = "console"

[build-dependencies]
embed-resource = "2.4"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
